--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/login_logo_netease_prs"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:name=".StarApplication"
